# azure-sdk-for-python

./: shared_requirements.txt
.github/: ARCHITECTS  CODEOWNERS  (+1 more)
sdk/agentserver/azure-ai-agentserver-activity/: CHANGELOG.md  MANIFEST.in  README.md  api.md  api.metadata.yml  cspell.json  dev_requirements.txt  mypy.ini  pyproject.toml
sdk/agentserver/azure-ai-agentserver-activity/azure/ai/agentserver/activity/: __init__.py  _activity.py  _cloud_adapter.py  _config.py  _constants.py  _m365_bridge.py
sdk/agentserver/azure-ai-agentserver-activity/samples/01-echo/: main.py  requirements.txt
sdk/agentserver/azure-ai-agentserver-activity/samples/02-custom-components/: main.py
sdk/agentserver/azure-ai-agentserver-activity/samples/03-self-hosted-app/: main.py  requirements.txt
sdk/agentserver/azure-ai-agentserver-activity/samples/04-custom-handler/: main.py  requirements.txt
sdk/agentserver/azure-ai-agentserver-activity/samples/05-multi-protocol/: main.py  requirements.txt
sdk/agentserver/azure-ai-agentserver-activity/tests/: conftest.py  test_activity_id.py  test_auth_model.py  test_bridge_turn.py  test_config_env.py  test_error_source_classification.py  test_host_delegation.py  test_server_routes.py  test_session_headers.py  test_tracing.py  test_tracing_e2e.py
sdk/agentserver/azure-ai-agentserver-ghcopilot/: CHANGELOG.md  api.metadata.yml  pyproject.toml
sdk/agentserver/azure-ai-agentserver-ghcopilot/azure/ai/agentserver/githubcopilot/: __init__.py  _version.py
sdk/agentserver/azure-ai-agentserver-optimization/: CHANGELOG.md  MANIFEST.in  README.md  cspell.json  dev_requirements.txt  pyproject.toml
sdk/agentserver/azure-ai-agentserver-optimization/azure/ai/agentserver/optimization/: __init__.py  _config.py  _models.py  _resolver.py  _version.py
sdk/agentserver/azure-ai-agentserver-optimization/tests/: conftest.py  test_config.py  test_integration.py  test_resolver.py
sdk/deviceupdate/azure-iot-deviceupdate/: CHANGELOG.md  MANIFEST.in  _metadata.json  api.md  api.metadata.yml  apiview-properties.json  assets.json  pyproject.toml
sdk/deviceupdate/azure-iot-deviceupdate/azure/iot/deviceupdate/: __init__.py  _client.py  _configuration.py  _patch.py
sdk/deviceupdate/azure-iot-deviceupdate/samples/DeployUpdate/: sample_deploy_update.py
sdk/deviceupdate/azure-iot-deviceupdate/samples/GetDevice/: sample_get_device.py
sdk/deviceupdate/azure-iot-deviceupdate/samples/GetUpdate/: sample_get_update.py
sdk/deviceupdate/azure-iot-deviceupdate/samples/ImportUpdate/: sample_import_update.py
sdk/eventhub/azure-mgmt-eventhub/: CHANGELOG.md  MANIFEST.in  README.md  _metadata.json  api.md  api.metadata.yml  apiview-properties.json  pyproject.toml  tsp-location.yaml
sdk/eventhub/azure-mgmt-eventhub/azure/mgmt/eventhub/: __init__.py  _client.py  _configuration.py  _version.py  types.py
sdk/eventhub/azure-mgmt-eventhub/generated_samples/: application_group_create.py  application_group_delete.py  application_group_get.py  application_group_list_by_namespace.py  cluster_delete.py  cluster_get.py  cluster_patch.py  cluster_put.py  cluster_quota_configuration_get.py  cluster_quota_configuration_patch.py  clusters_list_by_resource_group.py  clusters_list_by_subscription.py  eh_alias_authorization_rule_get.py  eh_alias_authorization_rule_list_all.py  eh_alias_authorization_rule_list_key.py  eh_alias_break_pairing.py  eh_alias_check_name_availability.py  eh_alias_create.py  eh_alias_delete.py  eh_alias_fail_over.py  eh_alias_get.py  eh_alias_list.py  eh_consumer_group_create.py  eh_consumer_group_delete.py  eh_consumer_group_get.py  eh_consumer_group_list_by_event_hub.py  eh_event_hub_authorization_rule_create.py  eh_event_hub_authorization_rule_delete.py  eh_event_hub_authorization_rule_get.py  eh_event_hub_authorization_rule_list_all.py  eh_event_hub_authorization_rule_list_key.py  eh_event_hub_authorization_rule_regenerate_key.py  eh_event_hub_create.py  eh_event_hub_delete.py  eh_event_hub_get.py  eh_event_hub_list_by_name_space.py  eh_event_hub_with_compact_policy_create.py  eh_event_hub_with_delete_or_compact_policy_create.py  eh_event_hub_with_delete_policy_create.py  eh_name_space_authorization_rule_create.py  (+33 more)
sdk/eventhub/azure-mgmt-eventhub/generated_tests/: conftest.py  test_event_hub_management_application_group_operations.py  test_event_hub_management_application_group_operations_async.py  test_event_hub_management_clusters_operations.py  test_event_hub_management_clusters_operations_async.py  test_event_hub_management_configuration_operations.py  test_event_hub_management_configuration_operations_async.py  test_event_hub_management_consumer_groups_operations.py  test_event_hub_management_consumer_groups_operations_async.py  test_event_hub_management_disaster_recovery_configs_operations.py  test_event_hub_management_disaster_recovery_configs_operations_async.py  test_event_hub_management_event_hubs_operations.py  test_event_hub_management_event_hubs_operations_async.py  test_event_hub_management_namespaces_operations.py  test_event_hub_management_namespaces_operations_async.py  test_event_hub_management_network_security_perimeter_configuration_operations.py  test_event_hub_management_network_security_perimeter_configuration_operations_async.py  test_event_hub_management_network_security_perimeter_configurations_operations.py  test_event_hub_management_network_security_perimeter_configurations_operations_async.py  test_event_hub_management_operations.py  test_event_hub_management_operations_async.py  test_event_hub_management_private_endpoint_connections_operations.py  test_event_hub_management_private_endpoint_connections_operations_async.py  test_event_hub_management_private_link_resources_operations.py  test_event_hub_management_private_link_resources_operations_async.py  test_event_hub_management_schema_registry_operations.py  test_event_hub_management_schema_registry_operations_async.py
sdk/storage/azure-storage-extensions/: MANIFEST.in  README.md  api.md  api.metadata.yml  pyproject.toml  setup.py
sdk/storage/azure-storage-extensions/tests/: test_crc64.py
(+12549 files in other folders)
