[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-iot-deviceupdate"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Corporation Azure Iot Deviceupdate Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.37.0",
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.dynamic.version]
attr = "azure.iot.deviceupdate._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "generated_tests*",
    "samples*",
    "generated_samples*",
    "doc*",
    "azure",
    "azure.iot",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[tool.azure-sdk-build]
pyright = false
ci_enabled = false

[tool.azure-sdk-conda]
in_bundle = false

[packaging]
auto_update = false
package_name = "azure-iot-deviceupdate"
package_pprint_name = "Azure Device Update"
is_stable = true
is_arm = false
