[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-mgmt-eventhub"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Azure Eventhub Management Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-mgmt-core>=1.6.0",
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.dynamic.version]
attr = "azure.mgmt.eventhub._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "generated_tests*",
    "samples*",
    "generated_samples*",
    "doc*",
    "azure",
    "azure.mgmt",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[tool.azure-sdk-build]
breaking = false
black = false
mypy = false
pyright = false
type_check_samples = false
verifytypes = false

[packaging]
package_name = "azure-mgmt-eventhub"
package_pprint_name = "Event Hub Management"
package_doc_id = "event-hub?view=azure-python-preview"
is_stable = false
sample_link = ""
title = "EventHubManagementClient"
package_nspkg = "azure-mgmt-nspkg"
is_arm = true
need_msrestazure = false
need_azuremgmtcore = true
exclude_folders = ""
